name         : calcc
version      : 0.1.0.0
synopsis     : Calculator for homework
license      : BSD3
license-file : LICENSE
author       : Matteo Ferrando, David Lilue
maintainer   : Matteo Ferrando matteo.ferrando2@gmail.com
-- A copyright notice.
-- copyright:
category     : Language
build-type   : Simple
cabal-version: >= 1.10
-- Extra files to be distributed with the package, such as examples or a README.
extra-source-files: README

executable calcc
  hs-source-dirs  : src
  main-is         : Main.hs
  default-language: Haskell2010

  ghc-options:
      -Wall

  -- Modules included in this executable, other than Main.
  other-modules: Language.Calcc.Lexer, Language.Calcc.Parser

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:
    --  DeriveTraversable
    --, FlexibleContexts
    --, FlexibleInstances
    --, GeneralizedNewtypeDeriving
    --, NamedFieldPuns
    --, TypeSynonymInstances

  -- Other library packages from which modules are imported.
  build-depends:
      base         >= 4.7 && < 4.8
    , containers   >= 0.5 && < 0.6
    , filepath     >= 1.3 && < 1.4
    , directory    >= 1.2 && < 1.3
    , process      >= 1.2 && < 1.3
    , transformers >= 0.3 && < 0.4
    , mtl          >= 2.1 && < 2.2
    , array        >= 0.5 && < 0.6
    , split        >= 0.2 && < 0.2.3
    , fgl          >= 5.5 && < 5.6
    , either       >= 4.4 && < 4.5

  build-tools: alex, happy
